# gebedstijden-ics

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: update-ics.yml
.tmp/: hissa_month.html
export/: prayer_times.ics
src/: calendar_builder.py  calendar_builder_test.py  fetcher.py  fetcher_test.py  icalendar.py  icalendar_test.py  main.py  models.py  parser.py  parser_test.py
src/__fixtures__/: hissa_month_apr.html  hissa_month_with_new_year.html
