[project]
name = "gebedstijden-ics"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "ics>=0.7.3",
    "selectolax>=0.4.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # I = import sorting

[tool.ruff.format]
quote-style = "single"
